tests/ui/inline-const/required-const.stderr
error[E0080]: evaluation of `foo::<i32>::{constant#0}` failed
  --> $DIR/required-const.rs:6:17
   |
LL |         const { panic!() }
   |                 ^^^^^^^^ evaluation panicked: explicit panic
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/required-const.rs:6:9
   |
LL |         const { panic!() }
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
